--- a/flask_aipaiming/app/templates/me.html
+++ b/flask_aipaiming/app/templates/me.html
@@ -44,7 +44,7 @@
                       <span style="margin-right: 5rem">
 
                           <img src="../static/SUI-Mobile-dev/img/xj123.png" style="
-                  margin-top: 1rem; width: 4rem;height: 4rem; border-radius: 80px">
+                  margin-top: 1rem; margin-left: 2rem; width: 4rem;height: 4rem; border-radius: 80px">
                           <span>zhangjie</span>
                       </span>
                 </div>
