--- a/flask_aipaiming/app/templates/main.html
+++ b/flask_aipaiming/app/templates/main.html
@@ -40,6 +40,8 @@
             <!-- 这里是页面内容区 -->
             <div class="page-index">
 
+                 {% for post in posts %}
+
                 <div class="card demo-card-header-pic">
                     <a href="/detail">
                         <div valign="bottom" class="card-header color-white no-border no-padding">
@@ -58,6 +60,8 @@
                     </a>
                 </div>
 
+                {% endfor %}
+
                 <div class="card demo-card-header-pic">
                 <a href="/detail">
                     <div valign="bottom" class="card-header color-white no-border no-padding">
@@ -76,6 +80,8 @@
                 </a>
             </div>
 
+
+
             <div class="card demo-card-header-pic">
                 <a href="/detail">
                     <div valign="bottom" class="card-header color-white no-border no-padding">
@@ -111,6 +117,7 @@
                     </div>
                 </a>
             </div>
+
             </div>
 
 
